# linksider

./: .gitignore  .gitmodules  .justfile  404.html  CNAME  Cargo.toml  LICENSE  README.md  Trunk.toml  flake.nix  index-d06dbef56c340943.css  index-f09809ef09082091.css  index.html  index.scss  linksider-6a846dea5698e1d4.js  playground.html  pog.txt  robots.txt  search_index.en.js  sitemap.xml  style.css
.github/workflows/: ci.yml  flow.yml  release.yml
assets/: config.toml  logic.toml  world.ldtk
assets/04b03/: COPYRIGHT.txt
assets/levels/: 0.ron  11.ron  12.ron  16.ron  17.ron  18.ron  21.ron  22.ron  25.ron  27.ron  3.ron  31.ron  33.ron  35.ron  36.ron  38.ron  5.ron
assets/tileset/: config.ron
autotile/: Cargo.toml
autotile/src/: color_rules.json  lib.rs
bevy-jam/: index.html
builds/: index.html
ldtk/: Cargo.toml
ldtk/json/: Cargo.toml
ldtk/json/src/: lib.rs
ldtk/json/tests/: test.rs
ldtk/src/: json.rs  lib.rs
levels/: groups.ron
levels/Bench/: 37.ron  airchar.ron  airpushchar.ron  list.ron
levels/Branch/: 22.ron  45.ron  DisableIntro.ron  list.ron
levels/Extra/: 3.ron  43.ron  5.ron  airbox.ron  list.ron
levels/Magnet/: 24.ron  31.ron  35.ron
levels/Stage 1/: 12.ron  13.ron  14.ron  15.ron  16.ron  18.ron  20.ron  23.ron  25.ron  27.ron  31.ron  32.ron  34.ron  36.ron  39.ron  6.ron  BasicFall.ron  BasicJump.ron  BasicJump2.ron  BasicMove.ron  DisableIntro.ron  FallJumpPractice2.ron  SideJumpIntro.ron  SpaceJump.ron  list.ron
levels/Stage 2/: 19.ron  SideJumpIntro.ron  TryToTeachPlayerLJumpShape.ron  list.ron  (+3 more)
logicsider/: Cargo.toml
src/: async_states.rs  background.rs  buttons.rs  camera_controls.rs  config.rs  game.rs  hehehe.rs  history.rs  id.rs  input.rs  int_angle.rs  level.txt  level_select.rs  levels.rs  lib.rs  logic.rs  main.rs  popup.rs  sound.rs  util.rs
steam-announcement/: index.html
website/: .gitignore  config.toml
(+141 files in other folders)
