[package]
name = "linksider"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = ["wav"] }
bevy-inspector-egui = "0.18.3"
bevy_ecs_ldtk = { version = "0.6.0", features = ["atlas"] }
bevy_ecs_tilemap = "0.10.0"
serde = "1.0.159"
serde_json = "1.0.95"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
