[package]
name = "ldtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
batbox-la.git = "https://github.com/geng-engine/geng"
geng.git = "https://github.com/geng-engine/geng"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
